--- a/style.css
+++ b/style.css
@@ -5,15 +5,263 @@
 }
 
 .navbar{
-    height: 60px;;
+    height: 60px;
     background-color: #0f1111;
     color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
-
+.logo{
+    height: 50px;
+    width: 100px;
+}
 .navlogo{
     background-image: url(./amazon_logo.png);
-    height: 50px;
-    width: 129px;
     background-size: cover;
+    height: 100%;
+    width: 100%;
+    
+}
+
+.border{
+    border: 1.5px solid transparent;
+}
+.border:hover{
+     border: 1.5px solid white;
+}
+.name{
+    font-size: 0.75rem;
+    color: #cccccc;
+    margin-left: 10px;
+}
+.addlogo{ 
+ display: flex;
+ font-size: 1rem;
+}
+.loc{
+    margin-left: 5px;
+}
+.adress{
+    height: 50px;
+    width: 75px;
+    align-content: center;
+}
+.navsearch{
+    display: flex;
+    justify-content: space-evenly;
+
+    background-color: aqua;
+    width: 620px;
+    height: 40px;
+    border-radius:4px ;
+}
+.select{
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: #e6e6e6;
+    width: 50px;
+    border: none;
+}
+.search{
+    background-color: #ffffff;
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+.serlogo{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem ;
+    background-color: rgb(247, 189, 65) ;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: #0f1111;
+}
+
+.sel{
+    height: 35px;
+    background: transparent;
+    color: #ffffff;
+    margin-top: 10px;
+    border: none;
+}
+
+.first{
+    font-size: 12px;
+}
+.second{
+    font-weight:200;
+    font-size: 14px;
+    font-weight: bold;
+}
+.cart{
+    
+    display: flex;
+}
+.img{
+    font-size: 30px;
+}
+
+.carts{
+    font-size: 14px;
+    margin-top: 11px;
+}
+.en{
+    height: 50px;
+}
+.accounts{
+    height: 50px;
+    align-content: center;
+}
+.ro{
+    height: 50px;
+    align-content: center;
+}
+.cart{
+    height: 50px;
+    align-items: center;
+}
+.navsearch:hover{
+    border: 2px solid orange;
+
+}
+
+.panel{
+    align-items: center;
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color:white;
+    justify-content: space-evenly;
+}
+
+.ops{
+        display: flex;
+        justify-content: space-evenly;
+        width: 95%;
+        font-size: 14px;
+        height: 40px;
+        align-items: center;
+    
+}
+.all{
+    display: flex;
+    height: 30px;
+    align-items: center;
+}
+.hi{
+    margin-left: 15px;
+    font-size: 18px;
+}
+.hlo{
+    margin-left: 3px;
+    margin-top: 1px;
+    font-size: 14px;
+}
+
+.in{
+    height: 30px;
+    align-content: center;
+}
+
+.hero-section{
+    background-image: url(./main.jpg);
+ height: 350px;
+ background-size: cover;
+ justify-items: center;
+ align-content: flex-end;
+}
+.block{
+    color: black;
+    height: 40px;
+    align-content: center;
+    justify-items: center;
+    font-size: 0.85rem;
+    background-color: #e6e6e6;
+    width: 90%;
     margin-bottom: 2%;
+}
+
+.block a{
+     color: blue;
+}
+
+.box{
+  border: 2px solid transparent;
+  height: 400px;
+  width: 23%;
+  background-color: white;
+  margin-bottom: 20px;
+}
+.boxes{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #546b96;
+    
+}
+.one{
+    height: 270px;
+    background-size: cover;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 25px;
+    margin-top: 15px;
+    align-content: center;
+}
+.blue{
+    margin-left: 12px;
+    color: rgb(15, 69, 247);
+}
+.head{
+    margin-left: 12px;
+    margin-top:25px ;
+}
+
+.box6{
+    width: 759px;
+}
+.footer1{
+    height: 45px;
+    background-color: #37475a;
+    color: #e6e6e6;
+    align-content: center;
+    justify-items: center;
+}
+
+.footer2{
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+ul{
+    margin-top: 40px;
+}
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
+
+.footpanel3{
+    background-color: #222f3d;
+    color: white;
+    border-top: 1.5px solid white;
+    height: 70px;
+    align-content: center;
+    display: flex;
+    justify-content: center;
+}
+.logo{
+    background-image: url(./amazon_logo.png);
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+    
 }
